# ICRA2019

./: README.md  blackboard.h  bottom_left.prototxt  bottom_right.prototxt  roboRTS_setup.sh  spin.cpp  top_left.prototxt  top_right.prototxt
laser_pose/: CMakeLists.txt  package.xml
laser_pose/src/: laser_pose.hpp  laser_pose_node.cpp
map_diff/: CMakeLists.txt  package.xml
map_diff/src/: .map_diff.hpp.swp  map_diff.hpp  map_diff_node.cpp
roborts/: package.xml
roborts_addon/pylon_camera/config/: camera.yaml  default.yaml
roborts_addon/pylon_camera/include/pylon_camera/internal/impl/: pylon_camera_gige.hpp
roborts_addon/pylon_camera/src/pylon_camera/: pylon_camera_parameter.cpp
roborts_addon/urg_node/launch/: urg_lidar.launch
roborts_bringup/launch/: armor.launch  roborts.launch  roborts_full.launch  roborts_stage.launch  roborts_stage.launch.save  static_tf.launch
roborts_bringup/scripts/udev/: roborts.rules
roborts_comm/: CMakeLists.txt  comm_node.cpp  demo.launch  package.xml  roboAconfig.yaml  roboBconfig.yaml
roborts_comm/config/: roboAconfig.yaml  roboBconfig.yaml
roborts_comm/launch/: bridge.launch
roborts_decision/: .behavior_test.cpp.swp  CMakeLists.txt  behavior_test.cpp
roborts_decision/behaviors/: behavior_test.cpp  buff_behavior.h  supply_behavior.h
roborts_decision/blackboard/: blackboard.h
roborts_decision/config/: decision.prototxt
roborts_decision/proto/: decision.proto
roborts_detection/armor_detection/: armor_detection_node.cpp  armor_detection_node.h  gimbal_control.cpp  gimbal_control.h
roborts_detection/armor_detection/config/: armor_detection.prototxt
roborts_detection/armor_detection/constraint_set/: constraint_set.cpp
roborts_detection/armor_detection/constraint_set/config/: constraint_set.prototxt
roborts_localization/amcl/config/: amcl.yaml
roborts_msgs/: CMakeLists.txt
roborts_msgs/msg/: Telemetry.msg
spin/: CMakeLists.txt  package.xml  spin_node.cpp
spin/config/: config.yaml
